<resources>
    <string name="app_name">Lab3</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="choose_file">Choose File</string>
    <string name="file_name">File Name</string>
    <string name="save">Save</string>
    <string name="upload_file">Upload File</string>
    <string name="createRoom">New lobby</string>
    <string name="gravatar">gravatar</string>
</resources>